@@ -25,6 +25,7 @@
 #ifdef MATHLIB_STANDALONE
 /*
  *  based on code in ../main/arithmetic.c
+ *  used only in standalone Rmath lib.
  */
 
 /* Include the header file defining finite() */
@@ -32,18 +33,18 @@
 # include <ieee754.h>		/* newer Linuxen */
 #else
 # ifdef HAVE_IEEEFP_H
-#  include <ieeefp.h>		/* others [Solaris 2.5.x], .. */
+#  include <ieeefp.h>		/* others [Solaris], .. */
 # endif
-#endif
-#if defined(Win32) && defined(_MSC_VER)
-# include <float.h>
 #endif
 
 int R_finite(double x)
 {
-#ifdef HAVE_WORKING_FINITE
+#ifdef HAVE_WORKING_ISFINITE
+    return isfinite(x);
+#elif HAVE_WORKING_FINITE
     return finite(x);
-#else
+# else
+/* neither finite nor isfinite work */
 # ifdef _AIX
 #  include <fp.h>
      return FINITE(x);
